# sermon_archive

./: .env.template  .gitignore  API_REFERENCE.md  DEPLOYMENT.md  README.md  conftest.py  endpoints.md  helpful_sql.md  main.py  manage.py  normalize_library_section_titles.py  project_tree.txt  pyproject.toml  schema.sql  schema.yml  validate_library_unit_markdown.py
api/: urls.py
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py  router.py
app/db/: __init__.py  models.py  session.py
app/schemas/: __init__.py  attachments.py  auth.py  search.py  sermons.py  verses.py  widget.py
app/services/: __init__.py  _mappers.py  _reference.py  attachment_service.py  auth_service.py  library_service.py  scripture_books.py  scripture_extraction_service.py  search_service.py  sermons_service.py  verses_service.py  widget_Service.py
apps/accounts/: api_views.py  serializers.py  urls.py
apps/attachments/: api_views.py  urls.py
apps/bible/: api_views.py  models.py  serializers.py  urls.py  verse_api_views.py  verse_urls.py
apps/illustrations/: api_views.py  sermon_urls.py  urls.py
apps/search/: api_views.py  urls.py
apps/sermons/: admin.py  api_views.py  apps.py  models.py  serializers.py  urls.py  verse_api_views.py  verse_parser.py  verse_urls.py  views.py
apps/widget/: api_views.py  serializers.py  urls.py
archive/: admin.py  api_verse.py  api_views.py  models.py  storage.py  urls.py  verse_parser.py  views.py
archive/services/: __init__.py  bible_widget.py  sermons.py  verse_tools.py
config/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
migrations/: env.py
schemas/: __init__.py  attachments.py  auth.py  sermons.py  verses.py  widget.py
sermon_archive/: __init__.py
sermon_archive_client/: __init__.py  client.py
sermon_client/: __init__.py  client.py
sermon_site/: asgi.py  settings.py  urls.py  wsgi.py
tests/: README.md  conftest.py  factories.py  library_snippet.txt  test_attachments_api.py  test_auth_api.py  test_library_api.py  test_scripture_extraction_api.py  test_search_api.py  test_sermon_archive_client.py  test_sermon_client.py  test_sermons_api.py  test_verses_api.py  test_widget_api.py
(+85 files in other folders)
