[tool.poetry]
name = "sermon-archive"
version = "0.1.0"
description = "Sermon Archive API backend"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.135.1"}
sqlalchemy = "^2.0.48"
pymysql = "^1.1.2"
sqlacodegen = "^4.0.2"
uvicorn = "^0.41.0"
pydantic = "^2.12.5"
cryptography = "^46.0.5"
pydantic-settings = "^2.13.1"
gunicorn = "^25.1.0"
starlette = "^0.52.1"
