[project]
name = "sermon-archive"
version = "0.1.1"
description = "Sermon Archive API Client and server dependencies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1,<0.29",
    "pydantic>=2.12.5,<3",
]

[tool.setuptools.packages.find]
include = ["sermon_archive"]

[dependency-groups]
backend = [
    "fastapi[standard]>=0.135.1,<0.136",
    "sqlalchemy>=2.0.48,<3",
    "pymysql>=1.1.2,<2",
    "sqlacodegen>=4.0.2,<5",
    "uvicorn>=0.41.0,<0.42",
    "cryptography>=46.0.5,<47",
    "pydantic-settings>=2.13.1,<3",
    "gunicorn>=25.1.0,<26",
    "starlette>=0.52.1,<0.53",
    "alembic>=1.18.4",
]

dev = [
    "ollama>=0.6.2",
    "pytest>=9.0.3,<10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
